--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "microbundle build --jsx react",
     "watch": "microbundle watch --compress false --jsx react",
     "publish": "npm publish",
-    "test": "ava test.ts"
+    "test": "jest test.tsx"
   },
   "repository": {
     "type": "git",
@@ -27,20 +27,32 @@
   },
   "homepage": "https://github.com/estrattonbailey/mounty#readme",
   "devDependencies": {
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^25.1.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "ava": "^2.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest": "^25.1.0",
     "microbundle": "^0.11.0",
-    "ts-node": "^8.4.1"
+    "ts-jest": "^25.2.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.7.5"
   },
-  "ava": {
-    "compileEnhancements": false,
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ]
+  "jest": {
+    "verbose": true,
+    "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "tsConfig": {
+          "noErrorTruncation": true,
+          "noImplicitAny": true,
+          "strictNullChecks": true,
+          "jsx": "react"
+        }
+      }
+    }
   },
   "dependencies": {
     "react": "^16.11.0",
