--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^25.1.0",
     "microbundle": "^0.12.0-next.8",
-    "react": ">= 16.9",
-    "react-dom": ">= 16.9",
+    "react": "16",
+    "react-dom": "16",
     "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
