--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "mounty",
   "version": "1.3.0",
   "description": "A tiny React transition manager with mount/unmount support and a familiar API.",
-  "source": "index.tsx",
+  "source": "lib/index.tsx",
   "main": "dist/mounty.js",
   "module": "dist/mounty.es.js",
-  "unpkg": "dist/mounty.umd.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "microbundle build --jsx react",
-    "watch": "microbundle watch --compress false --jsx react",
+    "prepare": "is-ci || husky install",
+    "build": "microbundle build",
+    "watch": "microbundle watch --compress false",
     "publish": "npm publish",
-    "test": "jest test.tsx"
+    "test": "jest",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
   },
   "keywords": [
     "react",
@@ -34,17 +36,26 @@
   },
   "homepage": "https://github.com/estrattonbailey/mounty#readme",
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@semantic-release/git": "^10.0.1",
+    "@tsconfig/create-react-app": "^1.0.2",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^25.1.2",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "commitlint": "^16.2.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
     "jest": "^25.1.0",
     "microbundle": "^0.12.0-next.8",
+    "prettier": "^2.6.2",
     "react": "16",
     "react-dom": "16",
+    "semantic-release": "^19.0.2",
     "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
