--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "prepare": "is-ci || husky install",
     "build": "microbundle build",
     "watch": "microbundle watch --compress false",
-    "publish": "npm publish",
     "test": "jest",
     "lint": "prettier --check .",
     "format": "prettier --write ."
@@ -27,14 +26,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/estrattonbailey/mounty.git"
+    "url": "git+ssh://git@github.com/truework/mounty.git"
   },
   "author": "estrattonbailey",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/estrattonbailey/mounty/issues"
+    "url": "https://github.com/truework/mounty/issues"
   },
-  "homepage": "https://github.com/estrattonbailey/mounty#readme",
+  "homepage": "https://github.com/truework/mounty#readme",
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
